## ==========
Version development

Vignettes: JSS article vol. 40(4) added as a vignette on state sequence analysis.

New functionalities:
  - New interface between C code and R which should be faster.

Changes in existing functions:
  - seqtreedisplay(): now overwrites previous file if filename is not NULL. 
  - checktriangleineq(): internal function to check triangle inequality is now
	  in C. It is now possible to check much bigger distance matrix.

Bug fixes:
  - seqtreedisplay(): was changing current directory when an error occured in 
		the plotting function.
  - seqefsub(): when using strsubseq argument, countMethod of seqeconstraint
		was not taken into account (Reported by Reto Buergin).
  - seqeconstraint(): added consistency checks to avoid misuses (Reported by Reto Buergin).
  - print.seqelist() and as.character.seqelist(): Corrected segfault when
		converting long event sequences to character (Reported by Pierre Molinier).
  - seqsubm(): Very small rounding errors (1e-16) were sometimes leading to non symmetric
		substitution cost matrix (Reported by Alexandre Pollien).
## ==========
Version 1.8-1

Misc:
  - updated references in the citation file and manual pages to point to the newly published article
    in the Journal of Statistical Software
  - other references update in the manual pages


## =========
Version 1.8

New functionalities:
  - seqtreedisplay(): drawing a sequence regression tree.
  - seqtree(): creating a sequence regression tree from a dissimilarity matrix.
  - seqrecode(): recoding state sequences objects (i.e., merging states).
  - weights are now supported by all dissimilarity analysis functions.
  - weights can be assigned to event sequence objects and are
      supported by all related functions.
  - seqdef(): 'xtstep' option added to set step between displayed tick-marks and
      labels on the x-axis of state sequence plots.
  - seqplot(): 'xtstep' option added to state sequence plots.

Bug fixes: