@@ -2,13 +2,19 @@
 ## Computes transition rates
 ## =========================
 
-seqtrate <- function(seqdata, statl=NULL, time.varying=FALSE, weighted=TRUE) {
+seqtrate <- function(seqdata, statl=NULL, time.varying=FALSE, weighted=TRUE, lag=1, with.missing=FALSE) {
 
-	if (!inherits(seqdata,"stslist")) 
+	if (!inherits(seqdata,"stslist")) { 
 		stop(" [!] seqdata is NOT a sequence object, see seqdef function to create one")
+	}
 
 	## State list if not specified
-	if (is.null(statl)) statl <- attr(seqdata,"alphabet")
+	if (is.null(statl)){
+		statl <- attr(seqdata,"alphabet")
+	}
+	if(with.missing){
+		statl <- c(statl, attr(seqdata,"nr"))
+	}
 	nr <- attr(seqdata,"nr")
 	void <- attr(seqdata,"void")
 
@@ -24,7 +30,13 @@ seqtrate <- function(seqdata, statl=NULL, time.varying=FALSE, weighted=TRUE) {
 
 	seqdata <- as.matrix(seqdata)
 	
-	numtransition <- sdur-1
+	if (lag<0) {
+		alltransition <- (abs(lag)+1):sdur
+	} else {
+		alltransition <- 1:(sdur-lag)
+	}
+	numtransition <- length(alltransition)
+	
 	## =================================
 	## time varying transition rates
 	## =================================
@@ -34,21 +46,25 @@ seqtrate <- function(seqdata, statl=NULL, time.varying=FALSE, weighted=TRUE) {
 		dnames <- list()
 		dnames[[1]] <- paste("[",statl," ->]",sep="")
 		dnames[[2]] <- paste("[-> ",statl,"]",sep="")
-		dnames[[3]] <- colnames(seqdata)[-sdur]
+		dnames[[3]] <- colnames(seqdata)[alltransition]
 		
 		tmat <- array(0, dim=c(nbetat, nbetat, numtransition))
 		dimnames(tmat) <- dnames
-		for (sl in 1:numtransition) {
+		for (sl in alltransition) {
+			missingcond <- seqdata[,sl+lag]!=void
+			if(!with.missing){
+				missingcond <- missingcond & seqdata[,sl+lag]!=nr
+			}
 			for (x in 1:nbetat) {
-				PA <- sum(weights[seqdata[,sl]==statl[x] 
-					& seqdata[,sl+1]!=nr & seqdata[,sl+1]!=void])
+				colxcond <- seqdata[,sl]==statl[x]
+				PA <- sum(weights[colxcond & missingcond])
 					
 				if (PA == 0) {
 					tmat[x,,sl] <- 0
 				}
 				else {
 					for (y in 1:nbetat) {
-						PAB <- sum(weights[seqdata[,sl]==statl[x] & seqdata[,sl+1]==statl[y]])
+						PAB <- sum(weights[colxcond & seqdata[,sl+lag]==statl[y]])
 						tmat[x,y,sl] <- PAB/PA
 					}
 				}
@@ -60,23 +76,26 @@ seqtrate <- function(seqdata, statl=NULL, time.varying=FALSE, weighted=TRUE) {
 	## =================================
 	else {
 		message(" [>] computing transition rates for states ",paste(statl,collapse="/")," ...",sep="")
-		tmat <- matrix(nrow=nbetat, ncol=nbetat)
+		tmat <- matrix(0, nrow=nbetat, ncol=nbetat)
 		row.names(tmat) <- paste("[",statl," ->]",sep="")
 		colnames(tmat) <- paste("[-> ",statl,"]",sep="")
-
+		missingcond <- seqdata[,alltransition+lag]!=void
+		if(!with.missing){
+			missingcond <- missingcond & seqdata[,alltransition+lag]!=nr
+		}
 		for (x in 1:nbetat) {
 			## Count
 			PA <- 0
-			for (sl in 1:numtransition) {
-				PA <- PA + sum(weights[seqdata[,sl]==statl[x] 
-					& seqdata[,sl+1]!=nr & seqdata[,sl+1]!=void])
+			colxcond <- seqdata[, alltransition]== statl[x] 
+			PA <- sum(weights * rowSums(colxcond & missingcond))
+			if (PA==0){
+				 tmat[x, ] <- 0
 			}
-			for (y in 1:nbetat) {
-				PAB <- 0
-				for (i in 1:numtransition) {
-					PAB <- PAB + sum(weights[seqdata[,i]==statl[x] & seqdata[,i+1]==statl[y]])
-					}
-				if (PA==0) tmat[x,y] <- 0 else tmat[x,y] <- PAB/PA
+			else {
+				for (y in 1:nbetat) {
+					PAB <- sum(weights * rowSums(colxcond & seqdata[,alltransition+lag]==statl[y]))
+					tmat[x,y] <- PAB/PA
+				}
 			}
 		}
 	}
