@@ -37,7 +37,7 @@ where \eqn{P(i,j)} is the transition rate from state \eqn{i} to
 \usage{
  seqsubm(seqdata, method, cval=NULL, with.missing=FALSE,
          miss.cost=NULL, time.varying=FALSE, weighted=TRUE,
-		 transition="both") 
+		 transition="both", lag=1, missing.trate=FALSE) 
 }
 
  \arguments{
@@ -63,7 +63,11 @@ matrix for each time unit. The time is the third dimension (subscript).}
 	\item{transition}{Only used if \code{time.varying=TRUE}. If \code{transition="both"}, it uses the transition 
 	rates from previous and next state. It can also be set to \code{"previous"} or \code{"next"}.
 	}
-	
+	\item{lag}{Integer. Only used with (\code{method="TRATE"}). Time between the two states considered to compute 
+		transition rates (one by default).}
+  \item{missing.trate}{Logical.  Only used with (\code{method="TRATE"}). 
+		If TRUE, substitution costs with missing state are also based on transition rates. If FALSE (default value),
+		the substitution cost for the missing state are set to \code{miss.cost}.}
 }
 \seealso{
  \code{\link{seqtrate}}, \code{\link{seqdef}}, \code{\link{seqdist}}.
