@@ -8,13 +8,16 @@ Returns a matrix with transition rates between states, computed from a set of se
 Transition rates are the probabilities of transition from one state to another observed in the sequence data. Substitution costs based on transition rates can be used when computing distances between sequences with the optimal matching method (see \link{seqdist}).
 }
 \usage{
- seqtrate(seqdata, statl=NULL, time.varying=FALSE, weighted=TRUE)
+ seqtrate(seqdata, statl=NULL, time.varying=FALSE, weighted=TRUE,
+		  lag=1, with.missing=FALSE)
 }
 \arguments{
   \item{seqdata}{a sequence object as defined by the \code{\link{seqdef}} function.}
   \item{statl}{a list of states or events for which the transition rates will be computed. If omitted (default), transition rates are computed between the distinct states in seqdata (obtained with the \code{\link{alphabet}} function).}
   \item{time.varying}{Logical. If TRUE return an \code{\link{array}} containing a distinct matrix for each time unit. The time is the third dimension (subscript).}
   \item{weighted}{Logical. If TRUE compute transition rates using weights specified in \code{seqdata}.}
+  \item{lag}{Integer. Time between the two states considered to compute transition rates (one by default).}
+  \item{with.missing}{Logical. If FALSE (default value), returned transition rates ignore missing values.}
 }
 
 \value{a matrix of dimension \eqn{ns*ns}, where \eqn{ns} is the number of states in the \link{alphabet} of the sequence object.}
